# KitchenOS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Manifest.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/alembic/: env.py
backend/app/: config.py  db.py  deps.py  main.py
documents/plan/: 00-overview.md  phase-0-product-definition.md  phase-1-mobile-shell-and-backend.md  phase-10-evaluation-and-demo.md  phase-2-pantry-ledger-and-quantity.md  phase-3-shopping-checklist.md  phase-4-active-assistance.md  phase-5-silent-check-in.md  phase-6-vision-ocr-enrichment.md  phase-7-product-nutrition-enrichment.md  phase-8-recipe-and-consumption.md  phase-9-review-and-preference-memory.md
documents/specs/: agents.md  api-spec.md  architecture.md  (+1 more)
mobile/: app.json  eas.json  package-lock.json  package.json
scripts/: generate_vision_fixtures.py
tests/: conftest.py  test_app.py  test_assist_api.py  test_auditor.py  test_change_log.py  test_checkin_api.py  test_checkin_consent.py  test_checklist_confirm.py  test_checklist_to_ledger.py  test_config.py  test_consent.py  test_consumption_flow.py  test_db.py  test_image_storage.py  test_input_router.py  test_job_model.py  test_ledger_boundary.py  test_ledger_service.py  test_lifecycle.py  test_migrations.py  test_pantry_api.py  test_pipeline_stubs.py  test_preprocessing.py  test_quantity.py  test_rate_limit.py  test_shopping_api.py  test_shopping_models.py  test_shopping_planner.py  test_sourced_field.py  test_storage.py  test_vision_contracts.py  test_vision_fixtures.py
(+95 files in other folders)
